--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@rails/webpacker": "5.4.3",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "flatpickr": "^4.6.13",
     "stimulus": "^3.1.0",
+    "stimulus-flatpickr": "^1.4.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
