Fix build configuration

--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3"
+  },
+  "engines": {
+    "node": "16.x",
+    "yarn": "1.22.x"
   }
 }
