Updated database configuration for Heroku deployment

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,6 +81,7 @@ test:
 #
 production:
   <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
   database: pettyhouse_production
   username: pettyhouse
   password: <%= ENV['PETTYHOUSE_DATABASE_PASSWORD'] %>
